--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>TimetradersFx - 8 Day Advanced Market Structure</title>
 
+<link rel="icon" type="image/png" href="/favicon.png">
+<link rel="apple-touch-icon" href="/favicon.png">
+
 <style>
 body{
   margin:0;
@@ -165,7 +168,6 @@ body{
   <div class="tagline">Patience • Discipline • Consistency</div>
 </div>
 
-<!-- HERO -->
 <div class="hero">
   <h1 class="gold-text">
     Master Professional Market Structure<br>
@@ -183,65 +185,36 @@ body{
   </a>
 </div>
 
-<!-- WHY SECTION -->
 <div class="section">
   <h2 class="gold-text">Why Most Traders Struggle</h2>
   <div class="grid">
     <div class="card">
       <h3>Indicator Dependency</h3>
-      <p>
-        Relying on lagging indicators instead of understanding real price movement 
-        leads to late entries and inconsistent results.
-      </p>
+      <p>Relying on lagging indicators instead of understanding real price movement leads to late entries and inconsistent results.</p>
     </div>
     <div class="card">
       <h3>No Structured Framework</h3>
-      <p>
-        Many traders enter randomly without a defined structure, 
-        risk plan, or repeatable system.
-      </p>
+      <p>Many traders enter randomly without a defined structure, risk plan, or repeatable system.</p>
     </div>
     <div class="card">
       <h3>Emotional Decision Making</h3>
-      <p>
-        Fear, greed, and impatience cause overtrading and poor risk control.
-      </p>
+      <p>Fear, greed, and impatience cause overtrading and poor risk control.</p>
     </div>
   </div>
 </div>
 
-<!-- WHAT YOU WILL LEARN -->
 <div class="section">
   <h2 class="gold-text">What You Will Learn</h2>
   <div class="grid">
-    <div class="card">
-      <h3>Market Structure Clarity</h3>
-      <p>Understand how price forms trends and shifts direction with logic.</p>
-    </div>
-    <div class="card">
-      <h3>Liquidity & Price Behavior</h3>
-      <p>Identify high-probability zones driven by liquidity.</p>
-    </div>
-    <div class="card">
-      <h3>Structured Trade Entries</h3>
-      <p>Execute rule-based entries with defined risk.</p>
-    </div>
-    <div class="card">
-      <h3>Professional Risk Management</h3>
-      <p>Build long-term consistency with proper capital protection.</p>
-    </div>
-    <div class="card">
-      <h3>Execution Discipline</h3>
-      <p>Develop patience, discipline, and consistency in live markets.</p>
-    </div>
-    <div class="card">
-      <h3>Real Trade Breakdowns</h3>
-      <p>Analyze structured setups step-by-step for clarity.</p>
-    </div>
+    <div class="card"><h3>Market Structure Clarity</h3><p>Understand how price forms trends and shifts direction with logic.</p></div>
+    <div class="card"><h3>Liquidity & Price Behavior</h3><p>Identify high-probability zones driven by liquidity.</p></div>
+    <div class="card"><h3>Structured Trade Entries</h3><p>Execute rule-based entries with defined risk.</p></div>
+    <div class="card"><h3>Professional Risk Management</h3><p>Build long-term consistency with proper capital protection.</p></div>
+    <div class="card"><h3>Execution Discipline</h3><p>Develop patience, discipline, and consistency in live markets.</p></div>
+    <div class="card"><h3>Real Trade Breakdowns</h3><p>Analyze structured setups step-by-step for clarity.</p></div>
   </div>
 </div>
 
-<!-- PROGRAM DETAILS -->
 <div class="section">
   <h2 class="gold-text">Program Details</h2>
   <div class="grid">
@@ -250,22 +223,18 @@ body{
       <p><strong>Brand:</strong> TimetradersFx</p>
       <p><strong>Duration:</strong> 8 Live Interactive Sessions</p>
       <p><strong>Price:</strong> ₹7499</p>
-      <a href="https://pages.razorpay.com/timetradersfx"
-         target="_blank"
-         class="btn">
+      <a href="https://pages.razorpay.com/timetradersfx" target="_blank" class="btn">
          SECURE YOUR SEAT – PAY ₹7499
       </a>
     </div>
   </div>
 </div>
 
-<!-- WHATSAPP SUPPORT -->
 <a href="https://wa.me/917975845653?text=Hi%20I%20have%20a%20question%20about%20the%208-Day%20Advanced%20Market%20Structure%20Program"
 class="whatsapp-btn" target="_blank">
 <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png">
 </a>
 
-<!-- FOOTER -->
 <div class="footer">
   <p>
     <strong>Disclaimer:</strong> TimetradersFx provides educational training related to trading concepts and market structure.
